--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Steve Is Awesome!!</title>
-	<script rel="stylesheet" href="styles.css"></script>
+	<link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
 	<h1 id="mainHeading">Welcome to Acme Software</h1>
 	<button id="moreInfo" onclick="addProjects()">See our Projects</button>
 	<div id="ourProjects"></div>
-	<script src="main.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
